@@ -6,11 +6,13 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Scanner;
+import java.util.logging.Level;
 
+import me.SuperRonanCraft.BetterRTP.BetterRTP;
 import org.jetbrains.annotations.Nullable;
 
 public class LogUploader {
@@ -21,8 +23,7 @@ public class LogUploader {
     @Nullable
    public static String post(List<String> requestBody) {
         try {
-            URL url = new URL(UPLOAD_URL);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(UPLOAD_URL).toURL().openConnection();
             connection.setRequestMethod("POST");
             connection.setRequestProperty("Content-Type", "text/plain");
             connection.setDoOutput(true);
@@ -45,7 +46,9 @@ public class LogUploader {
             }
 
             return response.toString();
-        } catch (IOException e) {
+        } catch (IOException exception) {
+            BetterRTP.getInstance().getLogger().log(
+                    Level.WARNING, "Unable to upload the BetterRTP command output", exception);
             return null;
         }
     }
@@ -54,8 +57,7 @@ public class LogUploader {
     public static String post(File file) {
         // Create the connection to the server
         try {
-            URL url = new URL(UPLOAD_URL);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(UPLOAD_URL).toURL().openConnection();
             connection.setRequestMethod("POST");
             connection.setRequestProperty("Content-Type", "text/yaml");
             connection.setDoOutput(true);
@@ -79,8 +81,9 @@ public class LogUploader {
             }
 
             return response.toString();
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (IOException exception) {
+            BetterRTP.getInstance().getLogger().log(
+                    Level.WARNING, "Unable to upload the BetterRTP log", exception);
             return null;
         }
         //getLogger().log(Level.INFO, "Response: " + response.toString());
